styles/global.css
/* INIT CUSTOM FONTS */

@font-face {
  font-family: 'gt haptik';
  src: url("http://static1.squarespace.com/static/5535bce1e4b071a2f7e12732/t/5589fe20e4b01285c1bc69e6/1435106848181/GT-Haptik-Regular-2.ttf") format('truetype');
}
@font-face {
  font-family: 'knockout';
  src: url("http://static1.squarespace.com/static/5535bce1e4b071a2f7e12732/t/5589fb95e4b001b8b746ff87/1435106197560/Knockout-48.otf") format('opentype');
}
@font-face {
  font-family: 'rotalics';
  src: url("http://static1.squarespace.com/static/5535bce1e4b071a2f7e12732/t/5589fe12e4b01285c1bc69b1/1435106834515/GT-Haptik-Bold-Rotalic.ttf") format('truetype');
}

h1, h2 {
  font-family: 'knockout', bebas neue, sans-serif !important;
}

h3, h4, h5, h6, p, a {
  font-family: 'gt haptik', helvetica, sans-serif !important;
}


/* SITE WIDE */

//tweak: { type: 'color', title: 'Site Background', target: 'body', category: 'Site Wide' }
@bgColor: #F7F7F7;

//tweak: { type: 'image', title: 'Site Background Image', target: 'body', category: 'Site Wide' }
.bg-image {
  background-image: url('/assets/groovepaper.png');
  background-position: top left;
  background-size: auto;
  background-attachment: scroll;
  background-repeat: repeat;
}

//tweak: { type: 'value', title: 'Site Width', min: 480, max: 1280, step: 10, target: '#page-body', property: 'width', category: 'Site Wide' }
@siteWidth: 1020px;

//tweak: { type: 'dropdown', title: 'Canvas Setting', options:[ 'Full Width', 'Site Width' ], default: 'Full Width', target: '#canvas', category: 'Site Wide' }

//tweak: { type: 'value', title: 'Canvas Offset', min: 0, max: 200, step: 1, target: '#canvas', property: ['margin-top', 'margin-bottom'], category: 'Site Wide' }
@cnvsOffset: 0px;

//tweak: { type: 'value', title: 'Canvas Padding', min: 0, max: 200, step: 1, target: '.canvas-setting-site-width #canvas-wrapper, #sidebar-one, #sidebar-two', property: ['padding-left', 'padding-right'], category: 'Site Wide' }
@cnvsPadding: 60px;

//tweak: { type: 'value', title: 'Canvas Border Size', min: 0, max: 72, step: 1, target: '#canvas', category: 'Site Wide' }
@cnvsBorderSize: 0px;

//tweak: { type: 'color', title: 'Lines & Decorations', target: '#page-body', category: 'Site Wide' }
@bordersColor: #E6E6E6;

//tweak: { type: 'checkbox', title: 'Hide Delimiter', active: false, target: '.hentry .post, .article-meta, #navigation-top, #navigation-bottom', category: 'Site Wide' }


/* HEADER */

//tweak: { type: 'color', title: 'Header Background', target: '#banner-area-wrapper', category: 'Header' }
@hdrBgColor: #7a7a7a;

//tweak: { type: 'image', title: 'Header Background Image', target: '#banner-area-wrapper', category: 'Header', js: "true" }
.hdr-bg-image {
  background-image: url('/assets/extra_clean_paper.png');
  background-position: center center;
  background-size: auto;
  background-attachment: fixed;
  background-repeat: repeat;
}

//tweak: { type: 'font', title: 'Site Title', target: '#page-header, #site-title a', showOnlyWhenPresent: '.banner-content-site-title-logo-tagline', category: 'Header' }
.site-title-font {
  font-family: Lora, Georgia, Times, serif;
  font-size: 72px;
  font-weight: 400;
  font-style: normal;
  letter-spacing: 2px;
  text-transform: none;
  line-height: 1.25em;
}
@site-title-font-letter-spacing: 2px;

//tweak: { type: 'color', title: 'Site Title Color', target: '#page-header, #site-title a, .horizontal-navigation-bar #site-title a', category: 'Header' }
@siteTitleColor: #EBEBEB;

//tweak: { type: 'color', title: 'Site Title Hover Color', target: '#page-header, #site-title a, .horizontal-navigation-bar #site-title a', category: 'Header' }
@siteTitleHoverColor: #CFCFCF;

//tweak: { type: 'font', title: 'Page Title', target: '#page-header, #page-title', category: 'Header' }
.page-title-font {
  font-family: Lora, Georgia, Times, serif;
  font-size: 55px;
  font-weight: 400;
  font-style: italic;
  letter-spacing: 2px;
  text-transform: none;
  line-height: 1.25em;
}
@page-title-font-letter-spacing: 2px;

//tweak: { type: 'color', title: 'Page Title Color', target: '#page-header, #page-title', category: 'Header' }
@pageTitleColor: #EBEBEB;

//tweak: { type: 'font', title: 'Site Tagline', target: '#banner-area-wrapper, .site-subtitle, .logo-subtitle, .page-description', category: 'Header' }
.tagline-font {
  font-family: Muli, Helvetica, Arial, sans-serif;
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  letter-spacing: 3px;
  text-transform: uppercase;
  line-height: 1.8em;
}
/* ... */

